--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title:               Poole
 tagline:             The Jekyll Butler
 url:                 http://getpoole.com
 paginate:            1
-baseurl:             http://owlblue.github.io/main/
+baseurl:             http://owlblue.github.io/owlblue/owlblue.github.io/
 
 # Assets
 #
